[package]
name = "dobot"
version = "0.1.1"
authors = ["Daniel (dmilith) Dettlaff <dmilith@me.com>"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-mockstream = "1.1"
tokio-timer = "0.1"
tokio-tls = "0.1"
tokio-process = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.7", optional = true }

irc = "0.13"
everust = "0.3"
tempfile = "3.0"
